--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="project_name">ONE SIP OF.</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="name1">A Cafe</string>
+    <string name="name2">B Cafe</string>
+    <string name="name3">C Cafe</string>
 </resources>
